--- a/src/app/home/admin/components/user-list/user-list.component.css
+++ b/src/app/home/admin/components/user-list/user-list.component.css
@@ -81,6 +81,7 @@ thead {
   --bs-table-hover-bg: #f8f9faba;
 }
 .mystyle {
+  text-decoration: none;
   color: white;
   background-color: #0a0a0ab3;
   height: 40px;
