--- a/src/app/home/diet/components/add-food/add-food.component.html
+++ b/src/app/home/diet/components/add-food/add-food.component.html
@@ -108,7 +108,7 @@
         <button
           type="button"
           class="btn save-button"
-          routerLink="/diet/calorie-counter"
+          routerLink="/home/diet/calorie-counter"
         >
           Back
         </button>
