--- a/src/app/home/admin/components/user-list/user-list.component.html
+++ b/src/app/home/admin/components/user-list/user-list.component.html
@@ -34,8 +34,7 @@
               | paginate
                 : {
                     itemsPerPage: tableSize,
-                    currentPage: page,
-                    totalItems: count
+                    currentPage: page
                   }
           "
         >
@@ -91,7 +90,6 @@
   </div>
   <div class="d-flex justify-content-center">
     <pagination-controls
-      style="text-decoration: none"
       class="mystyle"
       [maxSize]="5"
       [autoHide]="true"
