--- a/src/app/home/components/nav-bar/nav-bar.component.html
+++ b/src/app/home/components/nav-bar/nav-bar.component.html
@@ -2,16 +2,16 @@
   <div class="container-fluid">
     <a class="navbar-brand"
       ><img
-        src="https://cdn3.iconfinder.com/data/icons/medicalvista/512x512/heart_beat.png"
+        src="https://icons.iconarchive.com/icons/aha-soft/desktop-buffet/256/Cocktail-icon.png"
         height="25px"
         width="25px"
-        style="margin-right: 5px;filter:saturate(120%);"
+        style="margin-right: 5px;filter:saturate(120%);margin-bottom: 5px;"
       />NutriPlan</a
     >
     <div class="navbarRight">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active" routerLink="/dashboard"
+          <a class="nav-link" routerLinkActive="active" routerLink="dashboard"
             >Dashboard</a
           >
         </li>
@@ -19,13 +19,13 @@
           <a
             class="nav-link"
             routerLinkActive="active"
-            routerLink="/diet/calorie-counter"
+            routerLink="diet/calorie-counter"
             >Planner</a
           >
         </li>
 
         <li *ngIf="adminloggedIn()" class="nav-item">
-          <a class="nav-link" routerLinkActive="active" routerLink="/admin/food"
+          <a class="nav-link" routerLinkActive="active" routerLink="admin/food"
             >Food</a
           >
         </li>
@@ -33,7 +33,7 @@
           <a
             class="nav-link"
             routerLinkActive="active"
-            routerLink="/admin/user-list"
+            routerLink="admin/user-list"
             >User</a
           >
         </li>
@@ -41,7 +41,7 @@
           <a
             class="nav-link"
             routerLinkActive="active"
-            routerLink="/user/profile"
+            routerLink="user/profile"
             >Profile</a
           >
         </li>
