--- a/src/app/home/user/components/basic-details/basic-details.component.css
+++ b/src/app/home/user/components/basic-details/basic-details.component.css
@@ -34,6 +34,10 @@
   background-color: #8fb96580;
   color: white;
 }
+option{
+  background-color: white;
+  color: #000;
+}
 
 .form-select:focus {
   box-shadow: none;
