--- a/src/app/home/user/components/detail/detail.component.html
+++ b/src/app/home/user/components/detail/detail.component.html
@@ -119,7 +119,7 @@
             </div>
             <div class="row mb-2">
               <label class="col-4">Age</label>
-              <input class="form-control col-8" formControlName="age" />
+              <input type="number" class="form-control col-8" formControlName="age" />
             </div>
             <div>
               <div
