--- a/src/app/home/user/components/user/user.component.html
+++ b/src/app/home/user/components/user/user.component.html
@@ -48,7 +48,7 @@
         </div>
         <div class="row" style="height: 25px;">
           <label class="col-4">Height</label>
-          <input class="form-control col-8" formControlName="height" />
+          <input type="number" class="form-control col-8" formControlName="height" />
         </div>
 
         <div class="invalid">
@@ -131,7 +131,7 @@
         </div>
         <div class="row"  style="height: 25px;">
           <label class="col-4">Age</label>
-          <input class="form-control col-8" formControlName="age" />
+          <input type="number" class="form-control col-8" formControlName="age" />
         </div>
 
 
@@ -154,7 +154,7 @@
 
         <div class="row"  style="height: 25px;">
           <label class="col-4">Weight</label>
-          <input class="form-control col-8" formControlName="weight" />
+          <input type="number" class="form-control col-8" formControlName="weight" />
         </div>
 
 
