Added unit field and back button in 404 component

--- a/src/app/home/user/components/basic-details/basic-details.component.css
+++ b/src/app/home/user/components/basic-details/basic-details.component.css
@@ -8,7 +8,7 @@
   border-radius: 0%;
   height: 40px;
   width: 300px;
-  background-color: #8fb96580;
+  background-color: #a4c36080;
   color: white;
 }
 
@@ -31,10 +31,10 @@
   border-radius: 0%;
   border: none;
   width: 300px;
-  background-color: #8fb96580;
+  background-color: #a4c36080;
   color: white;
 }
-option{
+option {
   background-color: white;
   color: #000;
 }
@@ -109,4 +109,25 @@ p {
   background-image: url("https://th.bing.com/th/id/R.7689c5513084cd3ae199cec4f9b84af3?rik=epCX11FOp%2bUvgQ&riu=http%3a%2f%2fsfwallpaper.com%2fimages%2fbackground-food-7.jpg&ehk=OyOpA7JOvJ5kSZoKblkX96cNQ3uiu%2fHJUTOzI7b3j6o%3d&risl=&pid=ImgRaw&r=0");
   background-attachment: fixed;
   background-size: cover;
+}
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin: 0;
+}
+.shrink {
+  width: 263px;
+}
+.shrink:focus {
+  border-right: none;
+}
+.unit {
+  display: inline;
+  width: 37px;
+  border-right: none;
+  color: white;
+  background-color: #a4c36080;
+  padding: 6px;
 }
