--- a/src/app/home/user/components/detail/detail.component.css
+++ b/src/app/home/user/components/detail/detail.component.css
@@ -123,7 +123,7 @@ input[type="range"]::-webkit-slider-thumb {
   width: fit-content;
   padding: 3px;
 }
-option{
+option {
   background-color: white;
   color: #000;
 }
@@ -131,4 +131,21 @@ option{
   background: #fff;
   color: #000;
   border-color: #999;
+}
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin: 0;
+}
+.shrink{
+  width: 170px;
+}
+.unit{
+  display: inline;
+    width: 37px;
+    color: white;
+    background-color: #6e985680;
+    padding: 6px;
 }
