--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,5 +1,12 @@
-<img
-  src="https://cdn.searchenginejournal.com/wp-content/uploads/2017/08/25-Outstanding-404-Page-Examples-You-Have-to-See.png"
-  width="100%"
-  height="100%"
-/>
+<div class="outer-content">
+  <div class="container text-center">
+    <img
+      src="https://www.eaglesflight.com/hubfs/EL%20Pillar%20Page/Icon-Ch4.png"
+    />
+    <h2>404 - PAGE NOT FOUND</h2>
+    <h6>Sorry, we couldn't find the page you were looking for</h6>
+    <button type="button" class="btn btn-info" (click)="goBack()">
+      Go Back
+    </button>
+  </div>
+</div>
